# highwayhash

./: .gitignore  CMakeLists.txt
cmake/: highwayhashConfig.cmake.in
highwayhash/: CMakeLists.txt
